force-app/main/default/objects/Safety_rules__c/Safety_rules__c.object-meta.xml
<CustomObject>
    <label>Safety Rule</label>
    <nameField>
        <displayFormat>Rules-{0000}</displayFormat>
        <label>Safety Rules Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Safety Rules</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>