force-app/main/default/objects/Safety_rules__c/fields/Breakdown_equipment__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_equipment__c</fullName>
    <description>Is breakdown equipment in a safe accessible location/ Clear workspace with easy emergency exit?</description>
    <label>Breakdown equipment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>