force-app/main/default/objects/Safety_rules__c/fields/Electrical_hazard__c.field-meta.xml
<CustomField>
    <fullName>Electrical_hazard__c</fullName>
    <description>No electrical hazard or live exposed cables/switches/overhead</description>
    <label>Electrical hazard</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>