force-app/main/default/objects/Safety_rules__c/fields/Fire_Hazard__c.field-meta.xml
<CustomField>
    <fullName>Fire_Hazard__c</fullName>
    <description>Any fire hazard or flammable/chemical liquids in open/exposed manner?</description>
    <label>Fire Hazard</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>