force-app/main/default/objects/Safety_rules__c/fields/General_Housekeeping__c.field-meta.xml
<CustomField>
    <fullName>General_Housekeeping__c</fullName>
    <description>General Housekeeping/lighting/slippery floor/stacking of scrap/items handling risk?</description>
    <label>General Housekeeping</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>