force-app/main/default/objects/Safety_rules__c/fields/Other_Safety_Hazard__c.field-meta.xml
<CustomField>
    <fullName>Other_Safety_Hazard__c</fullName>
    <description>Any other Safety Hazard?</description>
    <label>Other Safety Hazard</label>
    <type>TextArea</type>
</CustomField>