force-app/main/default/objects/Safety_rules__c/fields/Personal_Protection_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Personal_Protection_Equipment__c</fullName>
    <description>Confirm Personal Protection Equipments in use (PPE) - Safety shoes/Helmets/Ear muffs/Eye Glass/Gloves/Reflectors/Belts as applicable?</description>
    <label>Personal Protection Equipment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>